Fixed CORS and map animation issues

--- a/views/test.html
+++ b/views/test.html
@@ -11,9 +11,9 @@
 
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.min.js"></script>
 
-		<script type="text/javascript" src="../js/Festerr.js"></script>
+		<script type="text/javascript" src="js/Festerr.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="../css/EventDetail.css">
+		<link rel="stylesheet" type="text/css" href="css/EventDetail.css">
 	</head>
 
 	<body>
@@ -23,11 +23,7 @@
 			<div class="page-header">
 				<h1>Festerr  <small>Find UK Festivals</small> </h1>
 
-				<!-- <div class="col-md-12"> -->
-					<!-- </div> -->
 			</div>
-
-
 			
 		</div>
 		<div class="row">
