add idea images to folder

--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -39,14 +39,10 @@
 				<canvas id="canvas" width="596" height="750" ></canvas>	
 			</div>
 	
-			<!-- INFO CONTAINER??? -->
+			<!-- TILES CONTAINER -->
 			<div class="col-md-6" id="info-container">
-
 				<div ng-controller="gridListDemoCtrl" class="gridListdemoDynamicTiles" ng-app="MyApp">
 					<md-content layout="row">
-			            <!-- <div flex="30" layout="row">
-			                hello from the left
-			            </div> -->
 			            <md-content flex="100" layout="column" md-scroll-y layout-padding>
 			                    <md-list ng-repeat="tileRow in tileList">
 			                    <div class="header" > <h2>Week {{$index + 1}}</h2></div>
@@ -66,30 +62,12 @@
 			                    </md-grid-list>
 			                    </md-list>     
 			            </md-content>
-			            <!--  <div flex="0">
-			                hello from the right
-			            </div> -->
-			            <!-- <script type="text/javascript">
-			            var grid = [[8,2]];
-			            gridSplit(grid, 5);
-			            </script> -->
 			        </md-content>
-				</div>
-								
-				<!-- <div class="row" style="overflow-y: scroll; height:600px; margin-top:20px">
-					<div class="col-md-12" style="margin-top:40px">
-						<ul class="list-group" id="event-list">
-						</ul>
-					</div>					
-				</div> -->
-					
-			</div>
-					
+				</div>				
+			</div>			
+		</div>
+	</div>	
 
-			</div>
-			
-		</div>	
-	</div>
 	
 
 
