--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Droid Sans', sans-serif;
+}
+
+
 .gridListdemoBasicUsage md-grid-list {
   margin: 8px; }
 .gridListdemoBasicUsage .gray {
@@ -15,6 +20,17 @@
 .gridListdemoBasicUsage md-grid-tile {
   transition: all 400ms ease-out 50ms; }
 
+@-webkit-keyframes MOVE-BG {
+  from {
+    -webkit-transform: translate(0,0);
+        /*-webkit-transform: translateY(0);*/
+
+  }
+  to { 
+    -webkit-transform: translate(-200%, -200%);
+        /*-webkit-transform: translateY(-200%);*/
+  }
+}
 
 .header h2{
   color: rgba(0,0,0,0.54);
@@ -70,14 +86,38 @@
 .gridListdemoDynamicTiles md-grid-tile md-icon {
   padding-bottom: 32px; }
 .gridListdemoDynamicTiles md-grid-tile md-grid-tile-footer {
-  background: rgba(0, 0, 0, 0.1);
-  height: 36px; }
+  background: rgba(0, 0, 0, 0.3);
+  height: 40px; 
+}
 .gridListdemoDynamicTiles md-grid-tile-footer figcaption {
   width: 100%; }
+
 .gridListdemoDynamicTiles md-grid-tile-footer figcaption h3 {
+/*  margin: 0;
+  font-weight: 700;
+  width: 100%;
+  padding-left: 10px;
+  font-size: medium;
+  text-align: left;
+  font-size: 25px;*/
+}
+
+.eventTile md-grid-tile-footer h3 {
   margin: 0;
   font-weight: 700;
   width: 100%;
   padding-left: 10px;
   font-size: medium;
-  text-align: left; }
+  text-align: left;
+  font-size: 25px;
+}
+
+.artistTile md-grid-tile-footer h3 {
+  margin: 0;
+  font-weight: 700;
+  width: 100%;
+  padding-left: 10px;
+  font-size: medium;
+  text-align: left;
+  font-size: 15px;
+}
