--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -42,33 +42,9 @@
 	
 			<!-- TILES CONTAINER -->
 			<div class="col-md-6" id="info-container">
-				<div ng-controller="FestivalListCtrl" class="gridListdemoDynamicTiles" ng-app="MyApp">
+				<div ng-controller="FestivalListCtrl" class="gridListdemoDynamicTiles" ng-app="festerrApp">
 					<md-content layout="row">
 			            <md-content flex="100" layout="column" md-scroll-y layout-padding>
-
-			            		<!-- Each festival event is contained in a tileRow -->
-			                    <!-- <md-list ng-repeat="tileRow in tileList">
-			                    <div class="header" > <h2>Week {{$index + 1}}</h2></div>
-			                    <md-grid-list
-			                        md-cols="8" md-row-height="1:1"
-			                        md-gutter="5px" > -->
-
-			                        <!-- Each artist is  a tile in the tileRow -->
-			                       <!--  <md-grid-tile ng-repeat="tile in tileRow"
-			                            md-rowspan="{{tile.span.row}}"
-			                            md-colspan="{{tile.span.col}}"
-			                            md-colspan-sm="1"
-			                            ng-class="tile.background"
-			                            ng-click="changeSize(tile)" >
-			                            <md-grid-tile-footer ng-class="tile.background">
-			                                <h3>{{tile.title}}</h3>
-			                            </md-grid-tile-footer>
-			                        </md-grid-tile>
-
-			                        'background-color': '{{event.tileLayout.background_color}}', ,
-
-			                    </md-grid-list>
-			                    </md-list>  -->  
 
 			                    <!-- Each festival event is contained in a tileRow -->
 			                    <md-list ng-repeat="event in eventList">
@@ -82,13 +58,14 @@
 			                            md-colspan="{{event.layout.span.col}}"
 			                            md-colspan-sm="1"
 			                            class="eventTile">
-			                            <div style="width: 100%; height: 100%;" ng-style="{'background-image' :'url({{event.layout.backgroundImage}})'}">
-			                            	
+			                            <div style="width: 100%; height: 100%;" ng-style="{'background-image' :'url({{event.layout.backgroundImage}})'}">			                            	
 			                            </div>
 			                            <md-grid-tile-footer>
 			                                <h3>{{event.name}}</h3>
 			                            </md-grid-tile-footer>
 			                        </md-grid-tile>
+
+
 			                        <!-- Each artist is  a tile in the tileRow -->
 			                        <md-grid-tile
 			                            md-rowspan="{{artist.layout.span.row}}"
@@ -148,6 +125,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
 
-	<script type="text/javascript" src="js/Festerr.js"></script>
-	<script type="text/javascript" src="js/gridListDemo.js"></script>
+	<script type="text/javascript" src="js/FesterrMap.js"></script>
+	<script type="text/javascript" src="app/app.js"></script>
+	<script type="text/javascript" src="app/views/festivalList.js"></script>
+	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
+
 </html>
