--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -129,5 +129,6 @@
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/views/festivalList.js"></script>
 	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
+	<script type="text/javascript" src="app/services/NetworkService.js"></script>
 
 </html>
