--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -69,10 +69,10 @@
 
 			                        <!-- Each artist is  a tile in the tileRow -->
 			                        <md-grid-tile
-			                            md-rowspan="{{artist.layout.span.row}}"
-			                            md-colspan="{{artist.layout.span.col}}"
-			                            md-colspan-sm="1"
 			                            ng-repeat="artist in event.artists | limitTo:8"
+			                            md-rowspan="{{artist.tileInfo.displaySpan.rows}}"
+			                            md-colspan="{{artist.tileInfo.displaySpan.cols}}"
+			                            md-colspan-sm="1"
 			                            class="artistTile">
 			                            <div style="width: 100%; height: 100%;" ng-style="{'background-image' :'url({{artist.image}})'}">			                            	
 			                            </div>
