--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -45,43 +45,10 @@
 				<div ng-controller="FestivalListCtrl" class="gridListdemoDynamicTiles" ng-app="festerrApp">
 					<md-content layout="row">
 			            <md-content flex="100" layout="column" md-scroll-y layout-padding>
-
-			                    <!-- Each festival event is contained in a tileRow -->
-			                    <md-list ng-repeat="event in eventList">
-			                    <md-grid-list
-			                        md-cols="8" md-row-height="1:1"
-			                        md-gutter="5px" >
-
-			                        <!-- Festival tile is also single -->
-									<md-grid-tile
-			                            md-rowspan="{{event.tileInfo.displaySpan.rows}}"
-			                            md-colspan="{{event.tileInfo.displaySpan.cols}}"
-			                            md-colspan-sm="1"
-			                            ng-click="selectTile(event.tileInfo)"
-			                            class="eventTile">
-			                            <div style="width: 100%; height: 100%;" ng-style="{'background-image' :'url({{event.largeimageurl}})'}">			                            	
-			                            </div>
-			                            <md-grid-tile-footer>
-			                                <h3>{{event.eventname}}</h3>
-			                            </md-grid-tile-footer>
-			                        </md-grid-tile>
-
-
-			                        <!-- Each artist is  a tile in the tileRow -->
-			                        <md-grid-tile
-			                            md-rowspan="{{artist.layout.span.row}}"
-			                            md-colspan="{{artist.layout.span.col}}"
-			                            md-colspan-sm="1"
-			                            ng-repeat="artist in event.artists | limitTo:8"
-			                            class="artistTile">
-			                            <div style="width: 100%; height: 100%;" ng-style="{'background-image' :'url({{artist.image}})'}">			                            	
-			                            </div>
-			                            <md-grid-tile-footer>
-			                                <h3>{{artist.name}}</h3>
-			                            </md-grid-tile-footer>
-			                        </md-grid-tile>
-			                    </md-grid-list>
-			                    </md-list>      
+						
+						<md-list ng-repeat="event in eventList" ng-include="'/templates/eventTile.html'">
+						</md-list>    
+		                     
 			            </md-content>
 			        </md-content>
 				</div>				
