--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -103,6 +103,18 @@ body {
 
 .festival-tile-body {
   width: 100%;
+  background-color: #8C7FAD;
+  padding-left: 20px;
+  color: white;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around; /* align horizontal */
+  align-items: center; /* align vertical */
+}
+
+.festival-details-text {
+  width: 100%;
+  font-size: 20px;
 }
 
 .festival-name-container h3 {
