--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -99,6 +99,8 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
+  background-size: cover;
+  background-position-y: 30%; 
 }
 
 .festival-tile-body {
