add drop shadow

--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -30,7 +30,7 @@
             </div> 
             
             <div id="header-user-login-container">
-                <md-button>Login</md-button>
+                <md-button>Sign in</md-button>
             </div>    
         </div>
         <div  id="content-container" class="container" >
