--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -147,7 +147,6 @@ body {
   align-items: center; /* align vertical */
 }
 
-
 .artistTile md-grid-tile-footer h3 {
   margin: 0;
   font-weight: 700;
@@ -156,10 +155,6 @@ body {
   font-size: medium;
   text-align: left;
   font-size: 15px;
-}
-
-#main-container {
-
 }
 
 #header-text-container h1{
@@ -198,12 +193,6 @@ body {
     height: 100%;
 }
 
-/*#header-search-box-container .form-control{
-    background-color: #BDC3C7;
-    color: white;
-    font-size: medium
-}*/
-
 #search-box {
     background-color: #BFBFBF;
     color: white;
@@ -227,6 +216,7 @@ body {
     z-index: 100; 
     padding: 10px 10px 10px 10px;
     color: white;
+    box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
     display: flex;
     flex-flow: row;
     justify-content: space-around; /* align horizontal */
