add tabs to header

--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -32,6 +32,20 @@
             <div id="header-user-login-container">
                 <md-button>Sign in</md-button>
             </div>    
+            
+            <div id="header-tabs-container">
+                <md-tabs md-dynamic-height md-border-bottom>
+                <md-tab label="What's Hot">
+
+                </md-tab>
+                <md-tab label="Upcoming">
+                    
+                </md-tab>
+                <md-tab label="Favourites">
+                    
+                </md-tab>
+                </md-tabs>
+            </div>
         </div>
         <div  id="content-container" class="container" >
             <div class="row">
