--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -168,6 +168,7 @@ body {
 
 #header-text-container {
     width: 10%;
+    height: 50%;
     display: flex;
     flex-flow: row;
     justify-content: space-between; /* align horizontal */
@@ -175,39 +176,55 @@ body {
 }
 
 #header-text-container h1 {
-    margin: 0px;
     font-size: xx-large;
-}
-
-#header-text-container h1 small {
-    color: white;
-    font-size: small;
+    margin-top: -10px;
 }
 
 #header-user-login-container {
     width: 10%;
+    height: 50%;
 }
 
 #header-search-box-container{
     width: 60%;
-    height: 100%;
+    height: 50%;
+}
+
+#header-tabs-container {
+    width:80%;
+}
+
+md-tabs.md-default-theme .md-tab {
+    color: rgba(255,255,255,0.6);
+}
+md-tabs.md-default-theme .md-tab.md-active, md-tabs.md-default-theme .md-tab.md-focused{
+    color:white;
+}
+
+md-tabs.md-default-theme md-ink-bar {
+    color: white;
+    background-color: white;
+}
+
+md-tabs.md-default-theme md-tabs-wrapper {
+    border: none;
 }
 
 #search-box {
     background-color: #BFBFBF;
     color: white;
+    height: 80%;
     font-size: medium; 
-    height: 100%;
     border-radius: 2px;
     border: 1px solid #BFBFBF;
 }
 
 #content-container {
-    margin-top: 65px;
+    margin-top: 140px;
 }
 
 #top-header {
-    height: 65px;
+    height: 140px;
     width: 100%;
     background-color: #6C7A89;
     position: fixed;
@@ -219,6 +236,7 @@ body {
     box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
     justify-content: space-around; /* align horizontal */
     align-items: center; /* align vertical */
 }
