--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -147,6 +147,12 @@ body {
   align-items: center; /* align vertical */
 }
 
+#progress-container {
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */  
+}
+
 
 .artistTile md-grid-tile-footer h3 {
   margin: 0;
