push progress circle below header

--- a/public/css/gridStyles.css
+++ b/public/css/gridStyles.css
@@ -149,6 +149,7 @@ body {
 
 
 #progress-container {
+  margin-top: 200px;
   display: flex;
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */  
