--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -29,7 +29,29 @@
 		<div class="row">
 			<!-- SEARCH BOX -->
 			<div class="col-md-6 col-md-offset-3">
-				<input ng-model="query" type="text" class="form-control" id="search-box" placeholder="Search for a festival, artist or event">
+<!-- 				<input ng-model="query" type="text" class="form-control" id="search-box" placeholder="Search for a festival, artist or event"> -->
+			    <md-chips
+			        ng-model="selectedChips"
+			        md-autocomplete-snap=""
+			        md-require-match="true">
+			        <md-autocomplete
+			        	md-selected-item="selectedChip"
+			        	md-search-text="searchText"
+			        	md-items="item in chipSearch(searchText)"
+			        	md-item-text="item.eventname"
+			        	placeholder="Search for a festival, artist or event">
+			        	<span
+			        		md-highlight-text="searchText">
+			        		{{item.eventname}}
+		        		</span>
+	        		</md-autocomplete>
+			        <md-chip-template>
+			        	<span>
+				        	<strong>{{$chip.eventname}}</strong>
+				        	<em>(festival)</em>
+			        	</span>
+		        	</md-chip-template>
+			    </md-chips>
 			</div>
 			
 		</div>
@@ -43,9 +65,9 @@
 			<div class="col-md-10" id="info-container">
 				<div class="gridListdemoDynamicTiles">
 					<md-content layout="row">
-			            <md-content flex="100" layout="column" md-scroll-y layout-padding>
+			            <md-content flex="100" layout="column" layout-padding>
 						
-						<md-list ng-repeat="event in eventList | filter: search" ng-include="'/templates/eventTile.html'">
+						<md-list ng-repeat="event in eventList | filter: displayEvent" ng-include="'/templates/eventTile.html'">
 						</md-list>    
 	                     
 			            </md-content>
