--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -20,7 +20,7 @@
         
     <div id="main-container" ng-controller="FestivalListCtrl">
         
-        <div id="top-header">  
+        <div id="top-header" ng-controller="HeaderCtrl">  
             <div id="header-text-container">
             <h1>Festerr</h1>               
             </div>
@@ -30,7 +30,7 @@
             </div> 
             
             <div id="header-user-login-container">
-                <md-button>Sign in</md-button>
+                <md-button ng-click="showSignupDialog($event)">Sign in</md-button>
             </div>    
             
             <div id="header-tabs-container">
@@ -86,6 +86,7 @@
 	<script type="text/javascript" src="js/FesterrMap.js"></script>
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/views/festivalList.js"></script>
+    <script type="text/javascript" src="app/views/header/header.js"></script>
 	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
 	<script type="text/javascript" src="app/services/NetworkService.js"></script>
 
