Add fleshed out signin page not fuctional

--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/EventDetail.css">
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="css/gridStyles.css">
+        <link rel="stylesheet" type="text/css" href="css/signup.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
