--- a/public/css/header.css
+++ b/public/css/header.css
@@ -42,6 +42,7 @@
 
 #header-tabs-container {
     width:80%;
+    /*margin-bottom: -5px;*/
 }
 
 md-tabs.md-default-theme .md-tab {
@@ -62,18 +63,18 @@ md-tabs.md-default-theme md-tabs-wrapper {
 
 .form-control{
     padding: 6px 30px;
+    box-shadow: none;
 }
 
-
 #top-header {
-    height: 140px;
+    height: 110px;
     width: 100%;
     background-color: #446CB3;
     position: fixed;
     top: 0px;
     left: 0px; 
     z-index: 100; 
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 0px 10px;
     color: white;
     box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
     display: flex;
