--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -15,7 +15,8 @@ md-input-container{
         padding: 2px 2px 10px;
 }
 
-#signup-dialog{
+#signup-dialog-container{
+    height: 100%;
     display: flex;
     flex-flow: column;
     justify-content: space-between; /* align horizontal */
@@ -27,8 +28,21 @@ md-input-container{
     justify-content: space-between; /* align horizontal */
 }
 
+#signin-dialog-actions-container{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around; /* align horizontal */
+}
+
 #signin-spotify{
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+#signin-container{
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between; /* align horizontal */
 }
