--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -31,7 +31,7 @@
             </div> 
             
             <div id="header-user-login-container">
-                <md-button ng-click="showSignupDialog($event)">Sign in</md-button>
+                <md-button ng-click="showSignupDialog($event)">Register</md-button>
             </div>    
             
             <div id="header-tabs-container">
