fix header not expanding on more chips added to search box

--- a/views/festivalMap.html
+++ b/views/festivalMap.html
@@ -36,7 +36,7 @@
 			        	md-search-text="searchText"
 			        	md-items="item in chipSearch(searchText)"
 			        	md-item-text="item.name"
-			        	placeholder="Search for a festival, artist or event">
+			        	placeholder="Search for a festival or artist">
 			        	<span
 			        		md-highlight-text="searchText">
 			        		{{item.name}}
