--- a/public/css/header.css
+++ b/public/css/header.css
@@ -42,7 +42,7 @@
 
 #header-tabs-container {
     width:80%;
-    /*margin-bottom: -5px;*/
+    margin-top: 20px;
 }
 
 md-tabs.md-default-theme .md-tab {
@@ -61,13 +61,17 @@ md-tabs.md-default-theme md-tabs-wrapper {
     border: none;
 }
 
+md-chips.md-default-theme .md-chips.md-focused {
+    box-shadow: 0 2px rgb(224,224,224);
+}
+
 .form-control{
     padding: 6px 30px;
     box-shadow: none;
 }
 
 #top-header {
-    height: 110px;
+
     width: 100%;
     background-color: #446CB3;
     position: fixed;
