--- a/views/index.html
+++ b/views/index.html
@@ -20,37 +20,10 @@
 	<body ng-app="festerrApp">
         
     <div id="main-container" ng-controller="FestivalListCtrl">
-        
+        <!-- header -->
         <ng-include src="'/app/views/header/header.html'"></ng-include>
-        
-        <div  id="content-container" class="container" >
-            <div class="row">
-                <!-- MAP CONTAINER -->
-                <div class="col-md-2" id="map-container">
-                    <!-- <canvas id="canvas" width="596" height="750" ></canvas>	 -->
-                </div>
-                   
-                <!-- Loading progress bar -->
-                <div id="progress-container" ng-show="!eventsLoaded">
-                    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-                </div>
-        
-                <!-- TILES CONTAINER -->
-                <div class="col-md-10" id="info-container" ng-show="eventsLoaded">
-                    <div class="gridListdemoDynamicTiles">
-                        <md-content layout="row">
-                            <md-content flex="100" layout="column" md-scroll-y layout-padding>
-                            
-                            <md-list>
-                                <festival-tile event="event" selected="tileSelected(tileID)" collapse="event.collapse" ng-repeat="event in eventList | filter: displayEvent"> </festival-tile>
-                            </md-list>    
-                            
-                            </md-content>
-                        </md-content>
-                    </div>				
-                </div>			
-            </div>
-        </div>	
+        <!-- Main festival list -->
+        <ng-include src="'/app/views/festivalList/festivalList.html'"></ng-include>    
     </div>   
 	</body>
 
@@ -65,7 +38,7 @@
 
 	<script type="text/javascript" src="js/FesterrMap.js"></script>
 	<script type="text/javascript" src="app/app.js"></script>
-	<script type="text/javascript" src="app/views/festivalList.js"></script>
+	<script type="text/javascript" src="app/views/festivalList/festivalList.js"></script>
     <script type="text/javascript" src="app/views/header/header.js"></script>
 	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
 	<script type="text/javascript" src="app/services/NetworkService.js"></script>
