Style search box better, align tabs left

--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -8,7 +8,7 @@
             ng-model="selectedChips"
             md-autocomplete-snap=""
             md-require-match="true">
-            <md-autocomplete
+            <md-autocomplete id="search-autocomplete"
                 md-selected-item="selectedChip"
                 md-search-text="searchText"
                 md-items="item in chipSearch(searchText)"
