--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,6 +7,19 @@
     border: 1px solid #4183D7;
 }
 
+#header-search-box-container{
+    background-color: #4183D7;
+    border-radius: 4px;
+}
+
+.md-chips .md-chip-input-container md-autocomplete {
+    box-shadow: none;
+}
+
+#search-autocomplete{
+        width: 300px;
+}
+
 #header-text-container h1{
     margin: 0px;
 }
@@ -26,8 +39,7 @@
 }
 
 #header-text-container h1 {
-    font-size: xx-large;
-    margin-top: -10px;
+    font-size: x-large;
 }
 
 #header-user-login-container {
@@ -62,7 +74,12 @@ md-tabs.md-default-theme md-tabs-wrapper {
 }
 
 md-chips.md-default-theme .md-chips.md-focused {
-    box-shadow: 0 2px rgb(224,224,224);
+    box-shadow: none;
+}
+
+md-chips.md-default-theme .md-chips{
+    box-shadow: none;
+    margin-left: 20px;
 }
 
 .form-control{
@@ -71,19 +88,18 @@ md-chips.md-default-theme .md-chips.md-focused {
 }
 
 #top-header {
-
     width: 100%;
     background-color: #446CB3;
     position: fixed;
     top: 0px;
     left: 0px; 
     z-index: 100; 
-    padding: 10px 10px 0px 10px;
+    padding: 10px 40px 0px 40px;    
     color: white;
     box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
-    justify-content: space-around; /* align horizontal */
+    justify-content: space-between; /* align horizontal */
     align-items: center; /* align vertical */
 }
