Change register button to pink raised type

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -71,7 +71,7 @@ md-tabs.md-default-theme .md-tab.md-active, md-tabs.md-default-theme .md-tab.md-
 
 md-tabs.md-default-theme md-ink-bar {
     color: white;
-    background-color: white;
+    background-color: #DB0A5B;
 }
 
 md-tabs.md-default-theme md-tabs-wrapper {
@@ -85,6 +85,16 @@ md-chips.md-default-theme .md-chips.md-focused {
 md-chips.md-default-theme .md-chips{
     box-shadow: none;
     margin-left: 20px;
+}
+
+.md-button.md-default-theme.md-raised:not([disabled]) {
+    color: white;
+    background-color: #DB0A5B;
+}
+
+.md-button.md-default-theme.md-raised:not([disabled]):hover {
+    color: white;
+    background-color: #f63c83; /* Slightly lighter highlight */
 }
 
 .form-control{
