--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -29,7 +29,7 @@
     </div> 
     
     <div id="header-user-login-container">
-        <md-button ng-click="showSignupDialog($event)">Register</md-button>
+        <md-button class="md-raised" ng-click="showSignupDialog($event)">Register</md-button>
     </div>    
     
     <div id="header-tabs-container">
