--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
         <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"> -->
         <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon.ico/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon.ico/favicon_no_drop.png">
 
         <!--<link rel="shortcut icon" href="/images/favicon.ico/favicon-16x16.png" type="image/x-icon" />-->
 	</head>
